--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,11 @@
 					<path>/CounterWebApp</path>
 				</configuration>
 			</plugin>
+			<plugin>
+				 <groupId>org.codehaus.mojo</groupId>
+			         <artifactId>sonar-maven-plugin</artifactId>
+			         <version>3.0.2</version>
+		        </plugin>
 
 		</plugins>
 
