--- a/pom.xml
+++ b/pom.xml
@@ -111,7 +111,7 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				 <groupId>org.codehaus.mojo</groupId>
+				 <groupId>org.apache.maven.plugins</groupId>
 			         <artifactId>sonar-maven-plugin</artifactId>
 			         <version>3.6.3</version>
 		        </plugin>
